<resources>
    <string name="app_name">Shine Glass</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="name">NAME</string>
    <string name="todo">TODO</string>
    <string name="login_with_otp">login with otp</string>
    <string name="login">Login</string>
    <string name="login_with">login with</string>
    <string name="or">or</string>
    <string name="signup">Signup</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="email_mobile_number">EMAIL/MOBILE NUMBER</string>
    <string name="password">PASSWORD</string>
    <string name="login_with_google">login with google</string>
    <string name="login_with_facebook">login with facebook</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="create_account">Create Account</string>
    <string name="user_name">USER NAME</string>
    <string name="mob_no">MOB NO</string>
    <string name="email">EMAIL</string>
    <string name="re_enter_password">RE-ENTER-PASSWORD</string>
    <string name="by_creating_an_account_i_accept_the_terms_and_conditions">By creating an account. I accept the Terms and Conditions</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="login_with_otp_txt">Login with OTP</string>
    <string name="get_otp">get otp</string>
    <string name="didn_t_received_otp">Didn\'t received OTP?</string>
    <string name="resend">Resend</string>
    <string name="enter_otp_in_59_sec">Enter OTP in</string>
    <string name="rupey">₹</string>
    <string name="my_wallet">my wallet</string>
    <string name="today_s_rate">today\'s rate</string>
    <string name="_12mm_rs_175">12MM=RS 175/</string>
    <string name="shop_by_category">shop by category</string>
    <string name="already_have_your_specification_ready">already have your specification ready?</string>
    <string name="upload_image_pdf">\  upload image/pdf</string>
    <string name="home">Home</string>
    <string name="my_requests">My Requests</string>
    <string name="my_orders">My Orders</string>
    <string name="My_Account">My Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify">verify</string>
    <string name="clear_glass">CLEAR GLASS</string>
    <string name="upload">UPLOAD</string>
    <string name="maximum_size_500kb">Maximum size 500kb</string>
    <string name="pdf">PDF/IMAGE</string>
    <string name="choose_file">\  Choose File</string>
    <string name="request_quotation">request quotation</string>
    <string name="cancel">Cancel</string>
    <string name="plus">+</string>
    <string name="image">IMAGE</string>
    <string name="_12mm">12MM</string>
    <string name="rs">=Rs</string>
    <string name="colon">/;</string>
    <string name="_75">75</string>
    <string name="black_tinted_glass">BLACK TINTED GLASS</string>
    <string name="type_of_glass">TYPE OF GLASS</string>
    <string name="inch">INCH</string>
    <string name="mm">MM</string>
    <string name="thickness">THICKNESS</string>
    <string name="width">WIDTH</string>
    <string name="height">HEIGHT</string>
    <string name="quantity">QUANTITY</string>
    <string name="tinted_glass">tinted glass</string>
    <string name="product_planilux">PRODUCT PLANILUX</string>
    <string name="strength">STRENGTH</string>
    <string name="pack_type">PACK TYPE</string>
    <string name="add_to_cart">add to cart</string>
    <string name="filename">filename</string>
    <string name="request_no">request no:</string>
    <string name="_123">123</string>
    <string name="date">date:</string>
    <string name="_12_10_2020">12.10.2020</string>
    <string name="view_quotation">view quotation</string>
    <string name="reject">reject</string>
    <string name="accept">accept</string>
    <string name="quotation_no">Quotation NO:</string>
    <string name="address_details">address details</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="enter_address_manually">Enter Address Manually</string>
    <string name="save_for_future">Save For Future</string>
    <string name="proceed_to_buy">proceed to buy</string>
    <string name="order_and_payment_details">order and payment details</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="shikha_das">Shikha Das</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="pay_online_credit_card_debit_card_upi">Pay Online(Credit Card, Debit Card, UPI)</string>
    <string name="place_order">place order</string>
    <string name="total">total-</string>
    <string name="_1400">1400</string>
    <string name="sec">sec</string>
    <string name="_59">59</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="change_password">change password</string>
    <string name="enter_your_old_password">ENTER YOUR OLD PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="re_enter_new_password">RE ENTER NEW PASSWORD</string>
    <string name="change">change</string>
    <string name="logout">logout</string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="pooja_glass_company">POOJA GLASS COMPANY</string>
    <string name="poojamiskin27_gmail_com">poojamiskin27@gmail.com</string>
    <string name="ph_no">PH NO.</string>
    <string name="_9876543221">9876543221</string>
    <string name="my_transactions">\  MY TRANSACTIONS</string>
    <string name="transaction_id">order id</string>
    <string name="mode">MODE</string>
    <string name="amount">AMOUNT</string>
    <string name="_77788889999">77788889999</string>
    <string name="_11_05_2020">11.05.2020</string>
    <string name="cash">cash</string>
    <string name="_8977">8977</string>
    <string name="transaction_details">transaction details</string>
    <string name="view_all_transactions">view all transactions</string>
    <string name="server_client_id">286211114529-qha8kqgt2n8csalvtv7mvdo875li44bu.apps.googleusercontent.com</string>
    <string name="secret_key">R8p8_xOK398lvYv00t8m5xSY</string>
    <string name="api_key">AIzaSyBbkyU3NIHJV2HiMQXAh40FeO0XFsRkAZM</string>

    //facebook api
    <string name="facebook_app_id">611652142750083</string>
    <string name="fb_login_protocol_scheme">fb611652142750083</string>
    <string name="edit_details">edit details</string>
    <string name="order_no">order no.</string>
    <string name="status">status</string>
    <string name="in_transit">in transit</string>
    <string name="my_cart">my cart</string>
    <string name="images_pdf_uploaded">images/pdf uploaded</string>
    <string name="remove">remove</string>
    <string name="cashbacks">cashbacks</string>
    <string name="wallet_cash">wallet cash</string>
    <string name="history">history</string>
    <string name="set">Set</string>
    <string name="update">update</string>
    <string name="your_cart_is_empty">Your Cart is Empty!!</string>
    <string name="no_requests_yet">No requests yet!!\nor\nSwipe down to Refresh.</string>
    <string name="please_login_to_see_your_requests">Please Login to see your Requests</string>
    <string name="my_addresses">my addresses</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="add_new">Add New +</string>
    <string name="service_not_available">Error</string>
    <string name="no_address_found">Address Not Foubd</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_the_new_password_you_would_like_to_use_and_nlogin_again">Enter the new password you would like to use and \nlogin again.</string>
    <string name="no_orders_yet">No Orders yet!!\nor\nSwipe down to Refresh.</string>
    <string name="loading">Loading ....</string>
    <string name="close">close</string>
    <string name="wallet">wallet</string>
    <string name="scale">SCALE</string>
    <string name="subcategory">SUBCATEGORY</string>
    <string name="redeem_wallet_amount">Redeem Wallet Amount</string>
    <string name="recent_activities">\  Recent Activities</string>
    <string name="show_all">show all</string>
    <string name="current_orders">Current Orders</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="no_current_orders">No Current Orders!!\nor\nSwipe down to Refresh</string>
    <string name="order_details">order details</string>
    <string name="order_id">order id :</string>
    <string name="customer_name">customer name :</string>
    <string name="customer_contact">customer contact :</string>
    <string name="delivery_address2">delivery address :</string>
    <string name="status2">status :</string>
    <string name="order_date">order date :</string>
    <string name="payment_mode">payment mode :</string>
    <string name="_123456789777777">123456789777777</string>
    <string name="get_the_directions">get the directions</string>
    <string name="recent_transactions">wallet transactions</string>
    <string name="previous_amount">Credit/Debit</string>
    <string name="updated_amount">updated amount</string>
    <string name="no_recent_activity_nor_nplease_pull_down_to_refresh">No Recent Activity!!\nor\nSwipe down to Refresh.</string>
    <string name="swipe_down_to_refresh">(Didn\'t see the pdf?? Swipe down to Refresh)</string>
    <string name="invoice">invoice</string>
    <string name="about_us">About Us</string>
    <string name="facebook">facebook</string>
    <string name="terms_amp_policies"><![CDATA[Terms & Policies]]></string>
    <string name="help_contact_us">Help/Contact Us</string>
    <string name="select_the_city">Select the City</string>
    <string name="check_payment_status">check payment status</string>
    <string name="enter_amount_to_redeem">Enter the amount to redeem :</string>
    <string name="_0_00">0.00</string>
    <string name="bank_account_details">Bank Account Details</string>
    <string name="account_holder_name">Account Holder Name :</string>
    <string name="bank_name">Bank Name :</string>
    <string name="account_number">Account Number :</string>
    <string name="ifsc_code">IFSC Code :</string>
    <string name="payment_details">Payment Details</string>
    <string name="enter_the_transaction_id">Enter the Transaction ID :</string>
    <string name="refer_the_above_bank_details_for_the_payment_respectively_and_enter_your_transaction_id_below">Refer the above bank details for the payment respectively and enter your Transaction ID below</string>
    <string name="details_category">Category</string>
    <string name="details_sub_category">Sub Category</string>
    <string name="thick">Thick</string>
    <string name="wt">Wt.</string>
    <string name="ht">Ht.</string>
    <string name="sc">Sc.</string>
    <string name="qty">Qty.</string>
    <string-array name="thickness_array">
        <item>"THICKNESS"</item>
        <item>" 4 "</item>
        <item>" 5 "</item>
        <item>" 6 "</item>
        <item>" 8 "</item>
        <item>" 10 "</item>
        <item>" 12 "</item>
        <item>" 15 "</item>
        <item>" 19 "</item>
    </string-array>

</resources>