<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_icon"
        android:title="@string/home"
        android:icon="@drawable/ic_outline_home_18"
        tools:targetApi="o" />

    <item
        android:id="@+id/request_icon"
        android:title="@string/my_requests"
        android:icon="@drawable/ic_outline_file_copy_18"
        tools:targetApi="o" />

    <item
        android:id="@+id/myOrders_icon"
        android:title="@string/my_orders"
        android:icon="@drawable/ic_outline_shopping_cart_18"
        tools:targetApi="o" />

    <item
        android:id="@+id/my_account_icon"
        android:title="@string/My_Account"
        android:icon="@drawable/ic_outline_person_18"
        tools:targetApi="o" />




</menu>