<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp"
    android:padding="16dp"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/transaction_id_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/_77788889999"
        android:layout_marginRight="16dp"
        android:textColor="@color/LightBlackColor"
        android:textAllCaps="true"
        android:textSize="10sp"
        tools:ignore="SmallSp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/date_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:textColor="@color/LightBlackColor"
        android:layout_marginRight="16dp"
        android:textAllCaps="true"
        android:text="@string/_11_05_2020"
        android:textSize="10sp"
        tools:ignore="SmallSp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/mode_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/LightBlackColor"
        android:layout_marginRight="16dp"
        android:textAllCaps="true"
        android:text="@string/cash"
        android:textSize="10sp"
        tools:ignore="SmallSp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/amount_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/LightBlackColor"
        android:textAllCaps="true"
        android:text="@string/_8977"
        android:textSize="10sp"
        tools:ignore="SmallSp"
        />

</LinearLayout>
