<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="5dp"
    app:cardElevation="16dp"
    tools:context=".MyRequestDetailsPopUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="Requirement Details"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/close_img_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_baseline_close_24" />

        <LinearLayout
            android:id="@+id/table_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/details_category"
                android:textColor="@color/black"
                android:textSize="9sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/details_sub_category"
                android:textColor="@color/black"
                android:textSize="9sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/thick"
                android:textColor="@color/black"
                android:textSize="9sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/wt"
                android:textColor="@color/black"
                android:textSize="9sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/ht"
                android:textColor="@color/black"
                android:textSize="9sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/sc"
                android:textColor="@color/black"
                android:textSize="9sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/qty"
                android:textColor="@color/black"
                android:textSize="9sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/quotation_details_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/table_heading"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/quotation_details_item" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>