<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:layout_marginStart="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_no"
            android:textAllCaps="true"
            android:layout_marginTop="2dp"
            android:textSize="12sp"
            android:textColor="@color/PrimaryTextColor"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textColor="@color/PrimaryTextColor"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textAllCaps="true"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:textColor="@color/PrimaryTextColor"
            android:fontFamily="sans-serif-medium"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="end"
        android:orientation="vertical"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/order_no._txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="158"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textColor="@color/BlackTextColor"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_11_05_2020"
            android:layout_marginTop="8dp"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textColor="@color/BlackTextColor"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/status_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_transit"
            android:textAllCaps="true"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="@color/BlackTextColor"
            android:fontFamily="sans-serif-medium"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>