<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".My_Address_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-medium"
            android:layout_centerHorizontal="true"
            android:text="@string/my_addresses"
            android:textAllCaps="true"
            android:textColor="@color/LightBlackColor"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/back_btn_img_addresses"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            app:tint="@color/colorPrimaryDark"
            android:tint="@color/colorPrimaryDark"
            android:contentDescription="@string/todo"
            android:layout_marginStart="16dp"
            tools:ignore="UseAppTint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/saved_addresses"
                android:textColor="@color/LightBlackColor"
                android:textSize="14sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/saved_addresses_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="68dp"/>

            <Button
                android:id="@+id/add_new_button"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="-52dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add_new"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>