<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Subcategory_Activity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:background="@drawable/descriptionbackground">

            <ImageView
                android:id="@+id/back_btn_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:tint="@color/whiteTextColor"
                app:tint="@color/whiteTextColor"
                tools:ignore="UseAppTint" />

            <TextView
                android:id="@+id/category_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/tinted_glass"
                android:textAllCaps="true"
                android:textColor="@color/whiteTextColor"
                android:textSize="16sp" />

        </FrameLayout>

        <TextView
            android:id="@+id/type_of_glass_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/type_of_glass"
            android:textColor="@color/BlackTextColor"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categories_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"/>
    </LinearLayout>
